--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
   --primary: #50736c;
   --secondary: #86938f;
   --tertiary: #6d938c;
-  --quatrinary: #979384;
+  --quatrinary: #6aa2c7;
   --light: #e3e4e3;
   --highlight: rgba(255, 255, 255, 0.5);
   --shadow:  rgba(34, 34, 34, 0.877);
@@ -151,7 +151,6 @@ label ul {
   transition: .35s ease-in-out;
 }
 
-/* ---------------------------------------- */
 nav {
   display: flex;
   padding: 15px 0 35px 0;
@@ -508,7 +507,6 @@ footer{
   background-color: var(--tertiary);
   padding: 0.625rem;
   border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
- 
 }
 
 .card-body {
@@ -517,35 +515,76 @@ footer{
   font-weight: bold;
 }
 
+/* TABLESELECT STYLING */
+
+.tableSelect {
+  user-select: none;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.map-container {
+  max-width: 1200px;
+  width: 80%;
+  height: 70vh;
+  background-color: rgb(194, 221, 231);
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  box-shadow: inset 0 10px 20px rgba(0, 0, 0, 0.25), 0 10px 15px rgba(0, 0, 0, 0.3);
+}
+
+#svg {
+  width: 90%;
+  height: auto;
+}
+
+/* MODAL STYLING */
+
 .modal {
   display: none; 
   position: fixed; 
   z-index: 1; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  left: 25%;
+  top: 25%;
 }
 
-/* Modal Content/Box */
+/* Modal Content */
 .modal-content {
-  background-color: #d6b6b6;
-  margin: 15% auto; 
-  padding: 20px;
   border: 1px solid #888;
-  width: 80%; 
+  width: 50vw;
+  height: 45vh;
   border-radius: 15px;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.75);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name:animatetop;
+  animation-duration: 0.4s;
 }
 
-/* The Close Button */
+#reservedMessage {
+  color: white;
+}
+
+#table-number {
+  color: white;
+  font-size: 22px;
+  margin-top: -20px;
+  padding: 10px 30px 10px 30px;
+  background-color: rgba(49, 49, 49);
+  border-radius: 20px;
+  border: 3px solid white;
+}
+
+/* Close Button */
 .close {
   color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
+  margin-right: 5px;
 }
 
 .close:hover,
@@ -554,42 +593,25 @@ footer{
   text-decoration: none;
   cursor: pointer;
 }
-/* Modal Header */
-.modal-header {
-  padding: 2px 16px;
-  background-color: #798099;
-  color: white;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
 
 /* Modal Body */
 .modal-body {
-  padding: 2px 16px;
- 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-
-/* Modal Footer */
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #798099;
+#modal-form {
+  width: 100%;
+  height: 100%;
   color: white;
-  border-bottom-left-radius: 10px;
-  border-bottom-left-radius: 15px;
+  text-align: center;
 }
 
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #d8d3a6;
-  margin: auto;
-  padding: 0;
-  border: 1px solid #888;
-  width: 80%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  animation-name:animatetop;
-  animation-duration: 0.4s;
+#submit {
+  margin-top: 50px;
+  cursor: pointer;
 }
 
 /* Add Animation */
@@ -598,102 +620,49 @@ footer{
   to {top: 0; opacity: 1}
 }
 
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-  /* position:absolute; */
-}
-
-.dropdown .dropbtn {
-  cursor: pointer;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: rgb(36, 30, 30);
-}
-
-.dropdown-content {
- min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
 .show {
   display: block;
 }
+
 .slidecontainer {
-  width: 30%; 
+  width: 100%;
 }
 
 /* The slider itself */
 .slider {
   -webkit-appearance: none; 
   appearance: none;
-  width: 100%;
+  width: 80%;
   height: 25px; 
   background: #d3d3d3;
   outline: none; 
-  opacity: 0.7; 
+  opacity: 0.8; 
+  border-radius: 20px;
   -webkit-transition: .2s; 
   transition: opacity .2s;
 }
 
-
-.slider:hover {
+.slider:hover, .slider:focus, .slider:active {
   opacity: 1; 
 }
-
 
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none; 
   appearance: none;
-  width: 25px; 
-  height: 25px; 
-  background: #085a7a;
-  cursor: pointer; 
+  width: 40px; 
+  height: 40px; 
+  background: #12771f;
+  cursor: pointer;
+  border-radius: 20px;
 }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  background: #085a7a; 
-  cursor: pointer; 
+  appearance: none;
+  width: 40px; 
+  height: 40px; 
+  background: #12771f;
+  cursor: pointer;
+  border-radius: 20px;
 }
 
 /* reservations page */
