--- a/views/tableselect.handlebars
+++ b/views/tableselect.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div class="tableSelect">
   <div class='map-container'>
     {{{restaurantObject.floorplan}}}
   </div>
@@ -6,40 +6,23 @@
   <div id='myModal' class='modal'>
     <div class='modal-content'>
       
-      <div class='modal-header'>
-        <span class='close'>&times;</span>
-        <h2>Graphical Reservation</h2>
-      </div>
+      <span class='close'>&times;</span>
       
       <div class='modal-body'>
+          <p id="table-number"><p>
         <form id="modal-form">
+          <p id="table-quantity"></p> 
+          <p>How many guests are in your party?</p>
           <div class='slidecontainer'>
-            <p id="table-number"><p>
-            <p id="table-quantity"></p> 
-            <p>How many guests are in your party?</p>
-            <input
-              type='range'
-              min='1'
-              max='10'
-              value='2'
-              class='slider'
-              id='myRange'
-            />
-            
-            <p>Reservation for: <span id='customer_id'></span></p>
+            <input type='range' min='1' max='10' value='2' class='slider' id='myRange'/>
           </div>
-          
+          <p>Reservation for: <span id='customer_id'></span></p>
           <button id='submit' type='submit'>Make your Reservation</button>
         </form>
 
         <div id="reservedMessage">
           <h2>Sorry, this table is already reserved for the night.</h2>
         </div>
-      
-      </div>
-
-      <div class='modal-footer'>
-        <h3>Thank you for choosing us for you reservation needs!</h3>
       </div>
 
     </div>
